# pre-commit-gitlabci-lint

./: .gitignore  README.md  pyproject.toml
src/gitlabci_lint/: entry.py
